2005-01-16  Davyd Madeley  <davyd@madeley.id.au>

	* Makefile.am:
	* volume-*.png (removed): No longer install pixmaps.

	* applet.c: Use icon theme instead.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_refresh):
	  Make sugar-daddy happy. Evil hack. Don't look. Fixes #153553.

2004-12-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* load.c: (create_mixer_collection):
	  Dont' show modems (similar to g-v-c), fixes #161258.

2004-11-15  Mariano Suárez-Alvarez <mariano@gnome.org>

	* dock.c, preferences.c: include glib/gi18n.h to get _

2004-09-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_setup):
	  Fix crasher (#153171).

2004-09-16  Dennis Cranston <dennis_cranston at yahoo com>

	Reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* preferences.c: (gnome_volume_applet_preferences_init):
	HIGify the preferences dialog: Use proper widget padding; remove
	the separator; add shadow to list view; and remove the word 
	applet from the dialog.
	
2004-09-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* Makefile.am:
	* applet.c: (gnome_volume_applet_get_type),
	(gnome_volume_applet_class_init), (gnome_volume_applet_init),
	(gnome_volume_applet_setup), (gnome_volume_applet_dispose),
	(gnome_volume_applet_popup_dock),
	(gnome_volume_applet_popdown_dock), (gnome_volume_applet_pop_dock),
	(gnome_volume_applet_toggle_mute), (gnome_volume_applet_run_mixer),
	(gnome_volume_applet_scroll), (gnome_volume_applet_button),
	(gnome_volume_applet_key), (gnome_volume_applet_orientation),
	(gnome_volume_applet_size), (cb_volume),
	(gnome_volume_applet_refresh), (cb_check), (cb_gconf),
	(cb_prefs_destroy), (cb_verb):
	* applet.h:
	* dock.c: (gnome_volume_applet_dock_get_type),
	(gnome_volume_applet_dock_class_init),
	(gnome_volume_applet_dock_init), (gnome_volume_applet_dock_new),
	(gnome_volume_applet_dock_dispose), (cb_timeout),
	(cb_button_press), (cb_button_release),