@@ -1,3 +1,9 @@
+2005-01-18  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* applet.[ch]: handled panel size and icon theme changes, as well
+	as a little muting/unmuting error (not updating correctly the icon). 
+	Fixes #164492
+
 2005-01-16  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Makefile.am:
